# serializer version: 1
# name: ProcessListExportsSiaeTest.test_list_for_siae_exports_view
  '''
  <div class="alert alert-info mt-3" id="besoin-dun-chiffre">
              <p class="mb-0">
                  <i aria-hidden="true" class="ri-information-line me-1"></i>
                  <b>Besoin d'un chiffre ?</b>
              </p>
              
                  <p class="mb-0">
                      Accédez aux <a href="/stats/siae/hiring" rel="noopener" target="_blank">données de recrutement de votre structure</a> (non nominatives) compilées, calculées et mises à jour quotidiennement.
                  </p>
              
          </div>
  '''
# ---
# name: ProcessListPrescriberTest.test_list_for_prescriber_pe_exports_view
  '''
  <div class="alert alert-info mt-3" id="besoin-dun-chiffre">
              <p class="mb-0">
                  <i aria-hidden="true" class="ri-information-line me-1"></i>
                  <b>Besoin d'un chiffre ?</b>
              </p>
              
                  <p class="mb-0">
                      Accédez aux données de votre agence (non nominatives) compilées, calculées et mises à jour quotidiennement :
                  </p>
                  <ul>
                      <li>
                          <a href="/stats/pe/state/main" rel="noopener" target="_blank">Voir les données de l'ensemble de l'état des candidatures orientées</a>
                      </li>
                      <li>
                          <a href="/stats/pe/conversion/main" rel="noopener" target="_blank">Voir les données du taux de transformation des candidatures</a>
                      </li>
                  </ul>
              
          </div>
  '''
# ---
# name: TestForPrescriber.test_filter_for_prescriber
  '''
  <div class="c-aside-filters__card collapse show" id="asideFiltersCollapse">
                              <form hx-get="/apply/prescriber/list" hx-indicator="#job-applications-section" hx-push-url="true" hx-swap="outerHTML" hx-target="#job-applications-section" hx-trigger="change delay:.5s, duetChange delay:.5s">
                                  <div class="c-aside-filters__card__body">
                                      <fieldset>
      <legend>Statut candidature</legend>
      <ul>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_0" name="states" type="checkbox" value="new"/>
                      <label class="form-check-label" for="id_states_0">Nouvelle candidature</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_1" name="states" type="checkbox" value="processing"/>
                      <label class="form-check-label" for="id_states_1">Candidature à l'étude</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_2" name="states" type="checkbox" value="postponed"/>
                      <label class="form-check-label" for="id_states_2">Candidature en attente</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_3" name="states" type="checkbox" value="prior_to_hire"/>
                      <label class="form-check-label" for="id_states_3">Action préalable à l’embauche</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_4" name="states" type="checkbox" value="accepted"/>
                      <label class="form-check-label" for="id_states_4">Candidature acceptée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_5" name="states" type="checkbox" value="refused"/>
                      <label class="form-check-label" for="id_states_5">Candidature déclinée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_6" name="states" type="checkbox" value="cancelled"/>
                      <label class="form-check-label" for="id_states_6">Embauche annulée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_7" name="states" type="checkbox" value="obsolete"/>
                      <label class="form-check-label" for="id_states_7">Embauché ailleurs</label>
                  </div>
              </li>
          
      </ul>
  </fieldset>
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_job_seekers">Nom du candidat</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_job_seekers" lang="fr" multiple="" name="job_seekers">
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <legend>Structure destinataire</legend>
          <div class="form-group"><label class="visually-hidden" for="id_to_companies">Structure</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_to_companies" lang="fr" multiple="" name="to_companies">
  </select></div>
      </fieldset>
  
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <legend>Émetteur</legend>
      
  
      
          <div class="form-group"><label class="form-label" for="id_senders">Nom de la personne</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_senders" lang="fr" multiple="" name="senders">
  </select></div>
      
  
      
  
      </fieldset>
  
                                      
  
  <hr/>
  <fieldset>
      <legend>Date d'envoi de la candidature</legend>
      <div class="form-group"><label class="form-label" for="id_start_date">À partir du</label><duet-date-picker class="" identifier="id_start_date" name="start_date" placeholder="À partir du"></duet-date-picker></div>
      <div class="form-group"><label class="form-label" for="id_end_date">Jusqu'au</label><duet-date-picker class="" identifier="id_end_date" name="end_date" placeholder="Jusqu'au"></duet-date-picker></div>
  </fieldset>
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_selected_jobs">Fiches de poste</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_selected_jobs" lang="fr" multiple="" name="selected_jobs">
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <legend>Statut du PASS IAE</legend>
          <div class="mb-2"><div class="form-check"><input class="form-check-input" id="id_pass_iae_active" name="pass_iae_active" type="checkbox"/><label class="form-check-label" for="id_pass_iae_active">Actif</label></div></div>
          <div class=""><div class="form-check"><input class="form-check-input" id="id_pass_iae_suspended" name="pass_iae_suspended" type="checkbox"/><label class="form-check-label" for="id_pass_iae_suspended">Suspendu</label></div></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <legend>Éligibilité IAE</legend>
          <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_eligibility_validated" name="eligibility_validated" type="checkbox"/><label class="form-check-label" for="id_eligibility_validated">Éligibilité validée</label></div></div>
      </fieldset>
  
  
                                      
  
  
  
      <hr/>
      <fieldset>
          <legend>Critères administratifs déclarés</legend>
          <div class=""><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_criteria" lang="fr" multiple="" name="criteria">
    <option value="1">Bénéficiaire du RSA</option>
  
    <option value="2">Allocataire ASS</option>
  
    <option value="3">Allocataire AAH</option>
  
    <option value="4">DETLD (+ 24 mois)</option>
  
    <option value="5">Niveau d'étude 3 (CAP, BEP) ou infra</option>
  
    <option value="6">Senior (+50 ans)</option>
  
    <option value="7">Jeune (-26 ans)</option>
  
    <option value="8">Sortant de l'ASE</option>
  
    <option value="9">DELD (12-24 mois)</option>
  
    <option value="10">Travailleur handicapé</option>
  
    <option value="11">Parent isolé</option>
  
    <option value="12">Personne sans hébergement ou hébergée ou ayant un parcours de rue</option>
  
    <option value="13">Réfugié statutaire, bénéficiaire d'une protection temporaire, protégé subsidiaire ou demandeur d'asile</option>
  
    <option value="14">Résident ZRR</option>
  
    <option value="15">Résident QPV</option>
  
    <option value="16">Sortant de détention ou personne placée sous main de justice</option>
  
    <option value="17">Maîtrise de la langue française</option>
  
    <option value="18">Mobilité</option>
  
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_departments">Département du candidat</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_departments" lang="fr" multiple="" name="departments">
  </select></div>
      </fieldset>
  
  
                                      <button aria-label="Appliquer les filtres" class="btn btn-block btn-primary mt-3" id="js-job-applications-filters-apply-button">
                                          Appliquer
                                      </button>
                                  </div>
                              </form>
                          </div>
  '''
# ---
# name: TestListForSiae.test_filter_for_different_kind[geiq]
  '''
  <div class="c-aside-filters__card collapse show" id="asideFiltersCollapse">
                              <form hx-get="/apply/siae/list" hx-indicator="#job-applications-section" hx-push-url="true" hx-swap="outerHTML" hx-target="#job-applications-section" hx-trigger="change delay:.5s, duetChange delay:.5s">
                                  <div class="c-aside-filters__card__body">
                                      <fieldset>
      <legend>Statut candidature</legend>
      <ul>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_0" name="states" type="checkbox" value="new"/>
                      <label class="form-check-label" for="id_states_0">Nouvelle candidature</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_1" name="states" type="checkbox" value="processing"/>
                      <label class="form-check-label" for="id_states_1">Candidature à l'étude</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_2" name="states" type="checkbox" value="postponed"/>
                      <label class="form-check-label" for="id_states_2">Candidature en attente</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_3" name="states" type="checkbox" value="prior_to_hire"/>
                      <label class="form-check-label" for="id_states_3">Action préalable à l’embauche</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_4" name="states" type="checkbox" value="accepted"/>
                      <label class="form-check-label" for="id_states_4">Candidature acceptée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_5" name="states" type="checkbox" value="refused"/>
                      <label class="form-check-label" for="id_states_5">Candidature déclinée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_6" name="states" type="checkbox" value="cancelled"/>
                      <label class="form-check-label" for="id_states_6">Embauche annulée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_7" name="states" type="checkbox" value="obsolete"/>
                      <label class="form-check-label" for="id_states_7">Embauché ailleurs</label>
                  </div>
              </li>
          
      </ul>
  </fieldset>
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_job_seekers">Nom du candidat</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_job_seekers" lang="fr" multiple="" name="job_seekers">
  </select></div>
      </fieldset>
  
  
                                      
  
  
  
                                      
  
  
  
                                      
  
  
  
      <hr/>
      <fieldset>
          <legend>Critères administratifs déclarés</legend>
          <div class=""><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_criteria" lang="fr" multiple="" name="criteria">
    <option value="1">Bénéficiaire du RSA</option>
  
    <option value="2">Allocataire ASS</option>
  
    <option value="3">Allocataire AAH</option>
  
    <option value="4">DETLD (+ 24 mois)</option>
  
    <option value="5">Niveau d'étude 3 (CAP, BEP) ou infra</option>
  
    <option value="6">Senior (+50 ans)</option>
  
    <option value="7">Jeune (-26 ans)</option>
  
    <option value="8">Sortant de l'ASE</option>
  
    <option value="9">DELD (12-24 mois)</option>
  
    <option value="10">Travailleur handicapé</option>
  
    <option value="11">Parent isolé</option>
  
    <option value="12">Personne sans hébergement ou hébergée ou ayant un parcours de rue</option>
  
    <option value="13">Réfugié statutaire, bénéficiaire d'une protection temporaire, protégé subsidiaire ou demandeur d'asile</option>
  
    <option value="14">Résident ZRR</option>
  
    <option value="15">Résident QPV</option>
  
    <option value="16">Sortant de détention ou personne placée sous main de justice</option>
  
    <option value="17">Maîtrise de la langue française</option>
  
    <option value="18">Mobilité</option>
  
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_departments">Département du candidat</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_departments" lang="fr" multiple="" name="departments">
  </select></div>
      </fieldset>
  
  
                                      
  
  <hr/>
  <fieldset>
      <legend>Date d'envoi de la candidature</legend>
      <div class="form-group"><label class="form-label" for="id_start_date">À partir du</label><duet-date-picker class="" identifier="id_start_date" name="start_date" placeholder="À partir du"></duet-date-picker></div>
      <div class="form-group"><label class="form-label" for="id_end_date">Jusqu'au</label><duet-date-picker class="" identifier="id_end_date" name="end_date" placeholder="Jusqu'au"></duet-date-picker></div>
  </fieldset>
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_selected_jobs">Fiches de poste</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_selected_jobs" lang="fr" multiple="" name="selected_jobs">
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <legend>Émetteur</legend>
      
  
      
          <div class="form-group"><label class="form-label" for="id_senders">Nom de la personne</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_senders" lang="fr" multiple="" name="senders">
  </select></div>
      
  
      
          <div class="form-group"><label class="form-label" for="id_sender_organizations">Nom de l'organisme prescripteur</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_sender_organizations" lang="fr" multiple="" name="sender_organizations">
  </select></div>
      
  
      </fieldset>
  
                                      <button aria-label="Appliquer les filtres" class="btn btn-block btn-primary mt-3" id="js-job-applications-filters-apply-button">
                                          Appliquer
                                      </button>
                                  </div>
                              </form>
                          </div>
  '''
# ---
# name: TestListForSiae.test_filter_for_different_kind[iae]
  '''
  <div class="c-aside-filters__card collapse show" id="asideFiltersCollapse">
                              <form hx-get="/apply/siae/list" hx-indicator="#job-applications-section" hx-push-url="true" hx-swap="outerHTML" hx-target="#job-applications-section" hx-trigger="change delay:.5s, duetChange delay:.5s">
                                  <div class="c-aside-filters__card__body">
                                      <fieldset>
      <legend>Statut candidature</legend>
      <ul>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_0" name="states" type="checkbox" value="new"/>
                      <label class="form-check-label" for="id_states_0">Nouvelle candidature</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_1" name="states" type="checkbox" value="processing"/>
                      <label class="form-check-label" for="id_states_1">Candidature à l'étude</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_2" name="states" type="checkbox" value="postponed"/>
                      <label class="form-check-label" for="id_states_2">Candidature en attente</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_3" name="states" type="checkbox" value="accepted"/>
                      <label class="form-check-label" for="id_states_3">Candidature acceptée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_4" name="states" type="checkbox" value="refused"/>
                      <label class="form-check-label" for="id_states_4">Candidature déclinée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_5" name="states" type="checkbox" value="cancelled"/>
                      <label class="form-check-label" for="id_states_5">Embauche annulée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_6" name="states" type="checkbox" value="obsolete"/>
                      <label class="form-check-label" for="id_states_6">Embauché ailleurs</label>
                  </div>
              </li>
          
      </ul>
  </fieldset>
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_job_seekers">Nom du candidat</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_job_seekers" lang="fr" multiple="" name="job_seekers">
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <legend>Éligibilité IAE</legend>
          <div class="form-group"><div class="form-check"><input class="form-check-input" id="id_eligibility_validated" name="eligibility_validated" type="checkbox"/><label class="form-check-label" for="id_eligibility_validated">Éligibilité validée</label></div></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <legend>Statut du PASS IAE</legend>
          <div class="mb-2"><div class="form-check"><input class="form-check-input" id="id_pass_iae_active" name="pass_iae_active" type="checkbox"/><label class="form-check-label" for="id_pass_iae_active">Actif</label></div></div>
          <div class=""><div class="form-check"><input class="form-check-input" id="id_pass_iae_suspended" name="pass_iae_suspended" type="checkbox"/><label class="form-check-label" for="id_pass_iae_suspended">Suspendu</label></div></div>
      </fieldset>
  
  
                                      
  
  
  
      <hr/>
      <fieldset>
          <legend>Critères administratifs déclarés</legend>
          <div class=""><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_criteria" lang="fr" multiple="" name="criteria">
    <option value="1">Bénéficiaire du RSA</option>
  
    <option value="2">Allocataire ASS</option>
  
    <option value="3">Allocataire AAH</option>
  
    <option value="4">DETLD (+ 24 mois)</option>
  
    <option value="5">Niveau d'étude 3 (CAP, BEP) ou infra</option>
  
    <option value="6">Senior (+50 ans)</option>
  
    <option value="7">Jeune (-26 ans)</option>
  
    <option value="8">Sortant de l'ASE</option>
  
    <option value="9">DELD (12-24 mois)</option>
  
    <option value="10">Travailleur handicapé</option>
  
    <option value="11">Parent isolé</option>
  
    <option value="12">Personne sans hébergement ou hébergée ou ayant un parcours de rue</option>
  
    <option value="13">Réfugié statutaire, bénéficiaire d'une protection temporaire, protégé subsidiaire ou demandeur d'asile</option>
  
    <option value="14">Résident ZRR</option>
  
    <option value="15">Résident QPV</option>
  
    <option value="16">Sortant de détention ou personne placée sous main de justice</option>
  
    <option value="17">Maîtrise de la langue française</option>
  
    <option value="18">Mobilité</option>
  
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_departments">Département du candidat</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_departments" lang="fr" multiple="" name="departments">
  </select></div>
      </fieldset>
  
  
                                      
  
  <hr/>
  <fieldset>
      <legend>Date d'envoi de la candidature</legend>
      <div class="form-group"><label class="form-label" for="id_start_date">À partir du</label><duet-date-picker class="" identifier="id_start_date" name="start_date" placeholder="À partir du"></duet-date-picker></div>
      <div class="form-group"><label class="form-label" for="id_end_date">Jusqu'au</label><duet-date-picker class="" identifier="id_end_date" name="end_date" placeholder="Jusqu'au"></duet-date-picker></div>
  </fieldset>
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_selected_jobs">Fiches de poste</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_selected_jobs" lang="fr" multiple="" name="selected_jobs">
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <legend>Émetteur</legend>
      
  
      
          <div class="form-group"><label class="form-label" for="id_senders">Nom de la personne</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_senders" lang="fr" multiple="" name="senders">
  </select></div>
      
  
      
          <div class="form-group"><label class="form-label" for="id_sender_organizations">Nom de l'organisme prescripteur</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_sender_organizations" lang="fr" multiple="" name="sender_organizations">
  </select></div>
      
  
      </fieldset>
  
                                      <button aria-label="Appliquer les filtres" class="btn btn-block btn-primary mt-3" id="js-job-applications-filters-apply-button">
                                          Appliquer
                                      </button>
                                  </div>
                              </form>
                          </div>
  '''
# ---
# name: TestListForSiae.test_filter_for_different_kind[non_iae]
  '''
  <div class="c-aside-filters__card collapse show" id="asideFiltersCollapse">
                              <form hx-get="/apply/siae/list" hx-indicator="#job-applications-section" hx-push-url="true" hx-swap="outerHTML" hx-target="#job-applications-section" hx-trigger="change delay:.5s, duetChange delay:.5s">
                                  <div class="c-aside-filters__card__body">
                                      <fieldset>
      <legend>Statut candidature</legend>
      <ul>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_0" name="states" type="checkbox" value="new"/>
                      <label class="form-check-label" for="id_states_0">Nouvelle candidature</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_1" name="states" type="checkbox" value="processing"/>
                      <label class="form-check-label" for="id_states_1">Candidature à l'étude</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_2" name="states" type="checkbox" value="postponed"/>
                      <label class="form-check-label" for="id_states_2">Candidature en attente</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_3" name="states" type="checkbox" value="accepted"/>
                      <label class="form-check-label" for="id_states_3">Candidature acceptée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_4" name="states" type="checkbox" value="refused"/>
                      <label class="form-check-label" for="id_states_4">Candidature déclinée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_5" name="states" type="checkbox" value="cancelled"/>
                      <label class="form-check-label" for="id_states_5">Embauche annulée</label>
                  </div>
              </li>
          
              <li>
                  <div class="form-check">
                      <input class="form-check-input" id="id_states_6" name="states" type="checkbox" value="obsolete"/>
                      <label class="form-check-label" for="id_states_6">Embauché ailleurs</label>
                  </div>
              </li>
          
      </ul>
  </fieldset>
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_job_seekers">Nom du candidat</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_job_seekers" lang="fr" multiple="" name="job_seekers">
  </select></div>
      </fieldset>
  
  
                                      
  
  
  
                                      
  
  
  
                                      
  
  
  
      <hr/>
      <fieldset>
          <legend>Critères administratifs déclarés</legend>
          <div class=""><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_criteria" lang="fr" multiple="" name="criteria">
    <option value="1">Bénéficiaire du RSA</option>
  
    <option value="2">Allocataire ASS</option>
  
    <option value="3">Allocataire AAH</option>
  
    <option value="4">DETLD (+ 24 mois)</option>
  
    <option value="5">Niveau d'étude 3 (CAP, BEP) ou infra</option>
  
    <option value="6">Senior (+50 ans)</option>
  
    <option value="7">Jeune (-26 ans)</option>
  
    <option value="8">Sortant de l'ASE</option>
  
    <option value="9">DELD (12-24 mois)</option>
  
    <option value="10">Travailleur handicapé</option>
  
    <option value="11">Parent isolé</option>
  
    <option value="12">Personne sans hébergement ou hébergée ou ayant un parcours de rue</option>
  
    <option value="13">Réfugié statutaire, bénéficiaire d'une protection temporaire, protégé subsidiaire ou demandeur d'asile</option>
  
    <option value="14">Résident ZRR</option>
  
    <option value="15">Résident QPV</option>
  
    <option value="16">Sortant de détention ou personne placée sous main de justice</option>
  
    <option value="17">Maîtrise de la langue française</option>
  
    <option value="18">Mobilité</option>
  
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_departments">Département du candidat</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_departments" lang="fr" multiple="" name="departments">
  </select></div>
      </fieldset>
  
  
                                      
  
  <hr/>
  <fieldset>
      <legend>Date d'envoi de la candidature</legend>
      <div class="form-group"><label class="form-label" for="id_start_date">À partir du</label><duet-date-picker class="" identifier="id_start_date" name="start_date" placeholder="À partir du"></duet-date-picker></div>
      <div class="form-group"><label class="form-label" for="id_end_date">Jusqu'au</label><duet-date-picker class="" identifier="id_end_date" name="end_date" placeholder="Jusqu'au"></duet-date-picker></div>
  </fieldset>
  
                                      
  
  
      <hr/>
      <fieldset>
          <div class="form-group"><label class="form-label" for="id_selected_jobs">Fiches de poste</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_selected_jobs" lang="fr" multiple="" name="selected_jobs">
  </select></div>
      </fieldset>
  
  
                                      
  
  
      <hr/>
      <fieldset>
          <legend>Émetteur</legend>
      
  
      
          <div class="form-group"><label class="form-label" for="id_senders">Nom de la personne</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_senders" lang="fr" multiple="" name="senders">
  </select></div>
      
  
      
          <div class="form-group"><label class="form-label" for="id_sender_organizations">Nom de l'organisme prescripteur</label><select class="form-select django-select2" data-allow-clear="true" data-minimum-input-length="0" data-placeholder="" data-theme="bootstrap-5" id="id_sender_organizations" lang="fr" multiple="" name="sender_organizations">
  </select></div>
      
  
      </fieldset>
  
                                      <button aria-label="Appliquer les filtres" class="btn btn-block btn-primary mt-3" id="js-job-applications-filters-apply-button">
                                          Appliquer
                                      </button>
                                  </div>
                              </form>
                          </div>
  '''
# ---
# name: TestListForSiae.test_warns_about_long_awaiting_applications[JOB SEEKER - no warnings]
  '''
  <section aria-labelledby="results" id="job-applications-section">
      <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
          <h3 class="h4 mb-0" id="results">
              
                  3 <strong>résultats</strong>
              
          </h3>
          <div aria-label="Actions sur les candidatures" class="flex-column flex-md-row btn-group btn-group-sm btn-group-action" role="group">
              
  
              
          </div>
      </div>
      
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 30 mars 2023 par
          
              <span class="text-nowrap">
                  
                      <strong>Max THROUGHPUT</strong>
                  
                  
                      <i aria-hidden="true" class="ri-home-smile-2-line me-1"></i>Orienteur
                  
              </span>
          
          
      </p>
      <div><span class="badge rounded-pill text-wrap badge-sm mb-1 bg-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <span>Entreprise d'insertion</span>
              <a class="h3 d-block text-decoration-none" href="/company/42/card">Hit pit</a>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex justify-content-end">
                          
                          
                              <a class="btn btn-outline-primary" href="/apply/11111111-1111-1111-1111-111111111111/jobseeker/details?back_url=/apply/job_seeker/list">
                                  Voir ma candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 18 mars 2023 par
          
              <span class="text-nowrap">
                  
                      <strong>Max THROUGHPUT</strong>
                  
                  
                      <i aria-hidden="true" class="ri-home-smile-2-line me-1"></i>Orienteur
                  
              </span>
          
          
      </p>
      <div><span class="badge rounded-pill text-wrap badge-sm mb-1 bg-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <span>Entreprise d'insertion</span>
              <a class="h3 d-block text-decoration-none" href="/company/42/card">Hit pit</a>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 3 semaines.
                              </p>
                          
                          
                              <a class="btn btn-outline-primary btn-block w-100 w-md-auto" href="/apply/22222222-2222-2222-2222-222222222222/jobseeker/details?back_url=/apply/job_seeker/list">
                                  Voir ma candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 16 février 2023 par
          
              <span class="text-nowrap">
                  
                      <strong>Max THROUGHPUT</strong>
                  
                  
                      <i aria-hidden="true" class="ri-home-smile-2-line me-1"></i>Orienteur
                  
              </span>
          
          
      </p>
      <div><span class="badge rounded-pill text-wrap badge-sm mb-1 bg-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <span>Entreprise d'insertion</span>
              <a class="h3 d-block text-decoration-none" href="/company/42/card">Hit pit</a>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 8 semaines.
                              </p>
                          
                          
                              <a class="btn btn-outline-primary btn-block w-100 w-md-auto" href="/apply/33333333-3333-3333-3333-333333333333/jobseeker/details?back_url=/apply/job_seeker/list">
                                  Voir ma candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
          
  
  
  
      
  </section>
  '''
# ---
# name: TestListForSiae.test_warns_about_long_awaiting_applications[PRESCRIBER - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="results" id="job-applications-section">
      <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
          <h3 class="h4 mb-0" id="results">
              
                  3 <strong>résultats</strong>
              
          </h3>
          <div aria-label="Actions sur les candidatures" class="flex-column flex-md-row btn-group btn-group-sm btn-group-action" role="group">
              
      <a aria-label="Exporter la liste de candidatures" class="btn btn-ico btn-secondary mt-3 mt-md-0" href="/apply/prescriber/list/exports">
          <i aria-hidden="true" class="ri-download-2-fill"></i>
          <span>Exporter</span>
      </a>
  
  
              
          </div>
      </div>
      
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 30 mars 2023 par
          
              <strong>Vous</strong>
          
          
              <span class="text-nowrap">
                  chez
                  <a class="btn-ico btn-link" href="/company/42/card">
                      <i aria-hidden="true" class="ri-community-line font-weight-medium ri-sm me-1"></i>
                      <span>Hit pit</span>
                  </a>
              </span>
          
      </p>
      <div><span class="badge rounded-pill text-wrap badge-sm mb-1 bg-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>J… H…</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex justify-content-end">
                          
                          
                              <a aria-label="Gérer la candidature de J… H…" class="btn btn-outline-primary" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir_candidature_prescripteur" href="/apply/11111111-1111-1111-1111-111111111111/prescriber/details?back_url=/apply/prescriber/list">
                                  Voir sa candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 18 mars 2023 par
          
              <strong>Vous</strong>
          
          
              <span class="text-nowrap">
                  chez
                  <a class="btn-ico btn-link" href="/company/42/card">
                      <i aria-hidden="true" class="ri-community-line font-weight-medium ri-sm me-1"></i>
                      <span>Hit pit</span>
                  </a>
              </span>
          
      </p>
      <div><span class="badge rounded-pill text-wrap badge-sm mb-1 bg-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>J… H…</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 3 semaines.
                              </p>
                          
                          
                              <a aria-label="Gérer la candidature de J… H…" class="btn btn-outline-primary btn-block w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir_candidature_prescripteur" href="/apply/22222222-2222-2222-2222-222222222222/prescriber/details?back_url=/apply/prescriber/list">
                                  Voir sa candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 16 février 2023 par
          
              <strong>Vous</strong>
          
          
              <span class="text-nowrap">
                  chez
                  <a class="btn-ico btn-link" href="/company/42/card">
                      <i aria-hidden="true" class="ri-community-line font-weight-medium ri-sm me-1"></i>
                      <span>Hit pit</span>
                  </a>
              </span>
          
      </p>
      <div><span class="badge rounded-pill text-wrap badge-sm mb-1 bg-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>J… H…</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 8 semaines.
                              </p>
                          
                          
                              <a aria-label="Gérer la candidature de J… H…" class="btn btn-outline-primary btn-block w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir_candidature_prescripteur" href="/apply/33333333-3333-3333-3333-333333333333/prescriber/details?back_url=/apply/prescriber/list">
                                  Voir sa candidature
                              </a>
                          
                      </div>
                  </div>
              </div>
              
          
          
  
  
  
      
  </section>
  '''
# ---
# name: TestListForSiae.test_warns_about_long_awaiting_applications[SIAE - warnings for 2222 and 3333]
  '''
  <section aria-labelledby="results" id="job-applications-section">
      <div class="d-flex flex-column flex-md-row align-items-md-center justify-content-md-between mb-3 mb-md-4">
          <h3 class="h4 mb-0" id="results">
              
                  3 <strong>résultats</strong>
              
          </h3>
          <div aria-label="Actions sur les candidatures" class="flex-column flex-md-row btn-group btn-group-sm btn-group-action" role="group">
              
      <a aria-label="Exporter la liste de candidatures" class="btn btn-ico btn-secondary mt-3 mt-md-0" href="/apply/siae/list/exports">
          <i aria-hidden="true" class="ri-download-2-fill"></i>
          <span>Exporter</span>
      </a>
  
  
              
          </div>
      </div>
      
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 30 mars 2023 par
          
          
      </p>
      <div><span class="badge rounded-pill text-wrap badge-sm mb-1 bg-info" id="state_11111111-1111-1111-1111-111111111111">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>Jacques HENRY</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex justify-content-end">
                          
                          
                              <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-outline-primary" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir-candidature-employeur" href="/apply/11111111-1111-1111-1111-111111111111/siae/details?back_url=/apply/siae/list">Voir sa candidature</a>
                          
                      </div>
                  </div>
              </div>
              
                  
  
  <div class="card my-3 my-md-4 px-4 alert-dismissible-once d-none container rounded border-important bg-important-lightest" id="rdvi-promo">
      <div class="row">
          <div class="d-none d-md-block col-md-auto align-self-center">
              <img alt="" class="m-auto" height="90" loading="lazy" src="/static/img/logo_rdv_insertion.svg"/>
          </div>
          <div class="col-12 col-md p-0">
              <div class="card-header pt-4">
                  <span class="badge rounded-pill bg-important badge-xs">Nouveau service</span>
                  <button aria-label="Fermer" class="btn-close" data-bs-dismiss="alert" data-bs-target="#rdvi-promo" type="button">
                  </button>
              </div>
              <div class="card-body pb-4">
                  <h4>RDV-Insertion simplifie les rendez-vous avec vos candidats</h4>
                  <p>
                      Besoin d'un outil de prise de RDV par mail et/ou SMS avec gestion des rappels pour
                      augmenter le taux de présence de vos candidats aux entretiens individuels et
                      aux informations collectives ?
                  </p>
                  <a aria-label="Découvrir le service RDV-Insertion dans un nouvel onglet" class="btn btn-ico btn-link p-0" href="https://tally.so/r/nro2X2" rel="noopener" target="_blank">
                      <span>Je découvre</span>
                      <i class="ri-external-link-line ri-lg"></i>
                  </a>
              </div>
          </div>
      </div>
  </div>
  
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 18 mars 2023 par
          
          
      </p>
      <div><span class="badge rounded-pill text-wrap badge-sm mb-1 bg-info" id="state_22222222-2222-2222-2222-222222222222">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>Jacques HENRY</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 3 semaines.
                              </p>
                          
                          
                              <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-outline-primary btn-block w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir-candidature-employeur" href="/apply/22222222-2222-2222-2222-222222222222/siae/details?back_url=/apply/siae/list">Voir sa candidature</a>
                          
                      </div>
                  </div>
              </div>
              
          
              <div class="c-box c-box--results has-links-inside my-3 my-md-4">
                  
                      
  
  <div class="c-box--results__header">
      
  
  <div class="d-flex flex-column flex-lg-row gap-1 gap-lg-3 mb-3">
      <p class="fs-sm mb-0 flex-grow-1">
          Émise le 16 février 2023 par
          
          
      </p>
      <div><span class="badge rounded-pill text-wrap badge-sm mb-1 bg-info" id="state_33333333-3333-3333-3333-333333333333">Nouvelle candidature</span></div>
  </div>
  
      <div class="c-box--results__summary">
          <i aria-hidden="true" class="ri-user-line"></i>
          <div>
              <h3>Jacques HENRY</h3>
              <div class="d-flex flex-column flex-md-row align-items-start align-items-md-end gap-1 gap-md-2">
                  
                  
                      
                          
                              
                                  <span class="badge badge-xs rounded-pill bg-success-lighter text-success">
                                      <i aria-hidden="true" class="ri-check-line"></i>
                                      Éligible à l’IAE
                                  </span>
                              
                          
                      
                  
              </div>
          </div>
      </div>
  </div>
  <hr class="m-0"/>
  <div class="c-box--results__body">
      <div class="c-box--results__list-data">
          
          
  
  
      
          <div class="c-info c-info--secondary">
              <span class="c-info__summary">Candidature spontanée</span>
          </div>
      
  
  
      </div>
  </div>
  
                  
                  <div class="c-box--results__footer">
                      <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center">
                          
                              <p class="text-warning fs-sm mb-3 mb-md-0">
                                  <i aria-hidden="true" class="ri-time-line ri-lg me-1"></i>
                                  En attente de réponse depuis 8 semaines.
                              </p>
                          
                          
                              <a aria-label="Gérer la candidature de Jacques HENRY" class="btn btn-outline-primary btn-block w-100 w-md-auto" data-matomo-action="clic" data-matomo-category="candidature" data-matomo-event="true" data-matomo-option="voir-candidature-employeur" href="/apply/33333333-3333-3333-3333-333333333333/siae/details?back_url=/apply/siae/list">Voir sa candidature</a>
                          
                      </div>
                  </div>
              </div>
              
          
          
  
  
  
      
  </section>
  '''
# ---
